@@ -8,6 +8,10 @@
    src/printing.c, src/callbacks.c:
    Rename utils_str_replace() utils_str_replace_all(), setting a
    'gchar **haystack' argument instead of returning a new string.
+ * src/editor.c:
+   For the Tabs indent type, remove spaces when unindenting (only) if
+   there are no tabs on the line.
+   Group undo actions for (un)indenting of multiple lines.
 
 
 2009-07-21  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
